-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
3
-
9223372036854775807
Changelogs are not really up to date regarding support of encrypted files, and the feature needs to be fixed. For instance, the 'raw' file name is put in the changelog record and returned to the changelogs consumer, whereas it should be 'un-escaped' (as it was escaped to be stored on disk) and encoded for presentation.